# cpt

./: .gitignore  .prettierrc.json  README.md  astro.config.mjs  md.py  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs
public/: sitemap.json
scripts/: dead_links.txt  main.py  map.py  pyproject.toml  scrape.py
scripts/src/: convert_to_mdx.py  create_sitemap.py  scrape.py
scripts/utils/: HostRedirectError.py  RateLimitedClient.py  dead_links.txt  exceptions.py  fn.py  frontmatter.mdx  globals.py  link-tags.json  links.txt  redirects.csv  resources.txt
src/components/: Body.astro  Collapsible.astro  Footer.astro  Header.astro  HeaderUfal.astro  Main.astro  ShadowStyles.astro  Sidebar.astro  SubHeader.astro
src/components/sidebar/: Collapsible.astro  Collapsible.tsx  CollapsibleTree.astro  Sidebar.astro  Sitemap.astro  Sitemap.tsx  Teste.astro  Toggle.tsx
src/content/www/: ciencia-da-computacao.md  discentes.md  disciplinas-1.md  docentes-1.md  documentos.md  extensao.md  horarios.md  institucional.md  projetos-de-pesquisa.md
src/layouts/: Layout.astro  MdLayout.astro
src/pages/: 404.mdx  [slug].astro  discentes.mdx  disciplinas-1.mdx  docentes-1.mdx  horarios.mdx  index.astro  index.mdx  institucional.mdx
src/pages/@@todas-noticias/: index.mdx
src/pages/discentes/: cadastro-de-atividades-complementares.mdx  centro-academico.mdx  colacao-de-grau-diploma.mdx  consulta-oferta-academica-resultados.mdx  copy_of_solicitacao-de-documentos.mdx  (+6 more)
src/style/: main.css
src/utils/: collapsibleCountStore.ts  readLinks.ts  sidebarCountStore.ts
(+359 files in other folders)
