[tool.poetry]
name = "cpt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = true

[tool.poetry.dependencies]
python = "^3.11"
markdownify = "^0.12.1"
bs4 = "^0.0.2"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
